--- a/index.html
+++ b/index.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-g" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Job Automation Analyzer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              'brand-primary': '#0D47A1',
-              'brand-secondary': '#1565C0',
-              'brand-accent': '#2196F3',
-              'neutral-light': '#F5F5F5',
-              'neutral-dark': '#212121',
-              'neutral-medium': '#424242',
-            },
-          }
-        }
-      }
-    </script>
   <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.12.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.12.0",
+    "vite": "https://esm.sh/vite@^7.0.6",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0"
   }
 }
 </script>
@@ -35,6 +20,7 @@
 </head>
   <body class="bg-neutral-dark">
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
