--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
   <script type="importmap">
 {
   "imports": {
+    "react/": "https://esm.sh/react@^19.1.1/",
     "react": "https://esm.sh/react@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/",
     "@google/genai": "https://esm.sh/@google/genai@^1.12.0",
     "vite": "https://esm.sh/vite@^7.0.6",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-neutral-dark">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
