--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Job Automation Analyzer</title>
   <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.12.0",
-    "vite": "https://esm.sh/vite@^7.0.6",
+    "@vercel/analytics/react": "https://esm.sh/@vercel/analytics@^1.3.1/react",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.7.0",
     "react": "https://esm.sh/react@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/"
+    "react/": "https://esm.sh/react@^19.1.1/",
+    "vite": "https://esm.sh/vite@^7.0.6",
+    "@vercel/analytics/": "https://esm.sh/@vercel/analytics@^1.5.0/"
   }
 }
 </script>
